z-index issues

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -363,11 +363,11 @@
   left: 0;
   opacity: 0.7;
   background-color: #fff;
-  z-index: 9998;
+  z-index: 10000;
 }
 
 #loading-image {
-  z-index: 9999;
+  z-index: 9996;
 }
 
 .swiper-container {
@@ -471,7 +471,7 @@
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 1;
+  z-index: 9999;
   /* Sit on top */
   padding-top: 100px;
   /* Location of the box */
@@ -575,4 +575,26 @@
   width: 100%;
   margin: 1rem auto;
   /* align-self: center; */
+}
+
+.website-counter {
+  background-color: #ff4957;
+  height: 50px;
+  width: 80px;
+  color: white;
+  border-radius: 30px;
+  font-weight: 700;
+  font-size: 25px;
+  margin-top: 10px;
+}
+
+/* Styles for reset button */
+#reset {
+  margin-top: 20px;
+  background-color: #008cba;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 8px 20px;
+  color: white;
+  border: 0;
 }
