--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1114,7 +1114,7 @@ section {
   left: 0;
   bottom: 0;
   width: 300px;
-  z-index: 9999;
+  z-index: 9998;
   background: #040b14;
 }
 
